# GoPostgreCrud

./: .gitignore  README.md  WORKSPACE.bazel  go.mod  go.sum
project/client/: client.go
project/models/: BUILD.bazel  order.go
project/proto/: BUILD.bazel  dummy-nogazelle.go  order.pb.go  order.proto
project/repository/: BUILD.bazel  dummy-nogazelle.go  repository.go  repository_test.go
project/repository/main/: main.go
project/server/: server.go
project/service/: BUILD.bazel  service.go  service_test.go
