load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "project_proto",
    srcs = [
        "order.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto"
    ],
)

go_proto_library(
    name = "project_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
    ],
    importpath = "github.com/jcorrea-videoamp/GoPostgreCrud/project/proto",
    proto = ":project_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "proto",
    embed = [":project_go_proto"],
    importpath = "github.com/jcorrea-videoamp/GoPostgreCrud/project/proto",
    visibility = ["//visibility:public"],
)